Fix critical not maximizing effects + Fix hero sheet edition mode overlaping areas

--- a/atoria.css
+++ b/atoria.css
@@ -1234,7 +1234,7 @@
   border: none;
 }
 .system-atoria .editing-mode.sheet.hero > .window-content > .body > .top-block {
-  grid-template-rows: calc(9 * var(--atoria-skill-height));
+  /* grid-template-rows: calc(9 * var(--atoria-skill-height)); */
 }
 .system-atoria .sheet.hero {
   --atoria-document-img-size: calc(7 * var(--atoria-skill-height));
