--- a/less/sheets/actor-hero-sheet.less
+++ b/less/sheets/actor-hero-sheet.less
@@ -1,5 +1,5 @@
 .editing-mode.sheet.hero > .window-content > .body > .top-block{
-    grid-template-rows: calc(9 * var(--atoria-skill-height));
+    /* grid-template-rows: calc(9 * var(--atoria-skill-height)); */
 }
 
 .sheet.hero {
